--- a/resume.editor/resumeIndex.html
+++ b/resume.editor/resumeIndex.html
@@ -36,7 +36,7 @@
 	<!-----service section start----------->
 	<div class="service">
 		<div class="title">
-			<h2>Generative Dunegons</h2>
+			<h2>Generative Dungeons</h2>
             <p>You are looking at 3 out of 3,000 playable Dungeons tradeable on Opensea. This project is the first RPG NFT. A piece of modern history.</p>
 		</div>
 
@@ -72,9 +72,10 @@
 	<footer>
 		<p>Anthony Clark</p>
 		<div class="social">
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-dribbble"></i></a>
+			<a href="https://www.linkedin.com/in/anthony-clark-6a0543162/" target="_blank"><img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/linked copy.png" alt="Linked In alternate Icon (not official logo)" width="74" height="74" class="social"></a>
+			<a href="https://opensea.io/RealtyLoop" target="_blank"><img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/Logomark-Blue copy.png"  alt="Opensea Logo" width="74" height="74" class="social"></a>
+			<a href="https://github.com/TJC1996" target="_blank"><img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/Octocat copy.jpg" alt="Github Logo" width="74" height="74" class="social"></a>
+			
 		</div>
 		<p class="end">Copyright By Anthony Clark</p>
 	</footer>
