--- a/resumeUpdate.editor/resumeUpdate.html
+++ b/resumeUpdate.editor/resumeUpdate.html
@@ -20,11 +20,11 @@
     <!-- Profile logo. Add a img tag in place of <span>. -->
     <p class="profileLogo"><!-- <img src="logoImage.png" alt="sample logo"> -->
 		
-		<img src="resumeUpdate.editor/img/Anthony Clark resume.png" alt="Anthony Clark logo" width=auto height="100"></p>
+		<img src="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/img/Anthony Clark resume.png" alt="Anthony Clark logo" width=auto height="100"></p>
   </div>
   <div class="profilePhoto"> 
     <!-- Profile photo --> 
-    <img src="/Users/tonyclark/Desktop/resumeUpdate.editor/img/IMG_3764.png" alt="Anthony Clark headshot" width="259" height="259" class="profilePhoto"> </div>
+    <img src="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/img/IMG_3764.png" alt="Anthony Clark headshot" width="259" height="259" class="profilePhoto"> </div>
   
     <!-- Identity details -->
   
@@ -39,14 +39,14 @@
   <aside class="socialNetworkNavBar">
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <a href="https://www.linkedin.com/in/anthony-clark-6a0543162/" target="_blank"><img src="/Users/tonyclark/Desktop/resumeUpdate.editor/img/linked.png" alt="Linked In alternate Icon (not official logo)" width="74" height="74" class="socialNetworkNav"></a> </div>
+      <a href="https://www.linkedin.com/in/anthony-clark-6a0543162/" target="_blank"><img src="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/img/linked.png" alt="Linked In alternate Icon (not official logo)" width="74" height="74" class="socialNetworkNav"></a> </div>
 	  
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
       <a href="https://opensea.io/RealtyLoop" target="_blank"><img src="img/Logomark-Blue.png"  alt="Opensea Logo" width="74" height="74" class="socialNetworkNav"></a> </div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-      <img src="PW/images/snapchat.png"  alt="snapchat logo" width="74" height="74" class="socialNetworkNav"> </div>
+      <a href="https://github.com/TJC1996" target="_blank"><img src="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/img/Octocat.jpg"  alt="github logo" width="74" height="74" class="socialNetworkNav"></a></div>
     <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here -->      </div>
   </aside>
@@ -61,7 +61,7 @@
     <hr class="sectionTitleRule2">
     <div class="section1Content">
       <p><span>Email:</span><a href="mailto:">tonyclark1996@gmail.com</a> </p>
-      <p><a href="/Users/tonyclark/Desktop/resume.editor/resumeIndex.html"><span>Website :</span> anthonyclark.com</a></p>
+      <p><a href="/Users/tonyclark/Desktop/resume.index/resume.editor/resumeIndex.html"><span>Website :</span> anthonyclark.com</a></p>
       <p><span>Phone :</span> (732)962-3405 </p>
       <p><span>Address :</span> 2055 Bacon Street #14, San Diego, CA 92107</p>
     </div>
@@ -110,10 +110,10 @@
 </section>
   <!-- Links to expore your past projects and download your CV -->
   <aside class="externalResourcesNav">
-    <div class="externalResources"> <a href="/Users/tonyclark/Desktop/resumeUpdate.editor/Resources/Resumex(SD).pdf" title="DOWNLOAD RESUME" target="_blank">DOWNLOAD RESUME</a> </div>
+    <div class="externalResources"> <a href="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/Resources/Resumex(SD).pdf" title="DOWNLOAD RESUME" target="_blank">DOWNLOAD RESUME</a> </div>
     <span class="stretch"></span>
   
-    <div class="externalResources"><a href="/Users/tonyclark/Desktop/resume.editor/resumeIndex.html" title="Playable NFTs" target="_blank">Try my playable NFTs</a></div>
+    <div class="externalResources"><a href="/Users/tonyclark/Desktop/resume.index/resume.editor/resumeIndex.html" title="Playable NFTs" target="_blank">Try my playable NFTs</a></div>
     <span class="stretch"></span> 
 	<!--div class="externalResources"><a href="Business_Page1.html" title="Business Website" target="_parent">Business Website</a></div>
     <span class="stretch"></span> -->
