Added pictures to NFT collection page

--- a/resume.editor/resumeIndex.html
+++ b/resume.editor/resumeIndex.html
@@ -15,12 +15,26 @@
 
 	<div class="hero">
 		<nav>
-			<a href="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/resumeUpdate.html" class="btn">Back</a>
-		</nav>
+			<a href="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/resumeUpdate.html" class="btn">Home</a>
+		</nav> 
+			
             <div class="newslatter">
 
 		    <div class="content">
-            <img src="img/tubby.png" width="200" height="200">
+            <img src="img/tubby.png" width="250" height="250">
+			</div>
+
+			<div class="content2">
+				<img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/157.png" width="270" height="250">
+			</div>
+
+			<div class="content3">
+				<img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/wingangel.png" width="250" height="250">
+			</div>
+	
+
+		<!----	<div class="content2">
+				<img src="img/tubby.png" width="300" height="300" > -->
             </div>
             </div>
             </div>
