--- a/resumeUpdate.editor/resumeUpdate.html
+++ b/resumeUpdate.editor/resumeUpdate.html
@@ -60,7 +60,7 @@
     <hr class="sectionTitleRule">
     <hr class="sectionTitleRule2">
     <div class="section1Content">
-      <p><span>Email:</span><a href="mailto:">tonyclark1996@gmail.com</a> </p>
+      <p><span>Email:</span><a href="mailto:tonyclark1996@gmail.com">tonyclark1996@gmail.com</a> </p>
       <p><a href="/Users/tonyclark/Desktop/resume.index/resume.editor/resumeIndex.html"><span>Website :</span> anthonyclark.com</a></p>
       <p><span>Phone :</span> (732)962-3405 </p>
       <p><span>Address :</span> 2055 Bacon Street #14, San Diego, CA 92107</p>
