audio addition to NFT collection page

--- a/resume.editor/resumeIndex.html
+++ b/resume.editor/resumeIndex.html
@@ -17,19 +17,23 @@
 		<nav>
 			<a href="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/resumeUpdate.html" class="btn">Home</a>
 		</nav> 
+		<audio controls autoplay>
+			<source src="/Users/tonyclark/Desktop/resume.index/resume.editor/resources/jazzyjoint.mp3" type="audio/mpeg">
+		  </audio>
+		
 			
             <div class="newslatter">
 
 		    <div class="content">
-            <img src="img/tubby.png" width="250" height="250">
+            <img src="img/tubby.png" width="280" height="280">
 			</div>
 
 			<div class="content2">
-				<img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/157.png" width="270" height="250">
+				<img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/157.png" width="280" height="280">
 			</div>
 
 			<div class="content3">
-				<img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/wingangel.png" width="250" height="250">
+				<img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/wingangel.png" width="280" height="280">
 			</div>
 	
 
@@ -42,7 +46,7 @@
 	<section class="about">
 		<div class="main">
 			<div class="about-text">
-				<h2>Check out my NFT collection below!</h2>
+				<h2>Check out my NFT collection!</h2>
 				</div>
 		</div>
 	</section>
