Migrate to one root file

--- a/resume.editor/resumeIndex.html
+++ b/resume.editor/resumeIndex.html
@@ -15,12 +15,13 @@
 
 	<div class="hero">
 		<nav>
-			<a href="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/resumeUpdate.html" class="btn">Home</a>
+			<a href="./resumeUpdate.html" class="btn">Home</a>
 		</nav> 
 		<audio controls autoplay>
-			<source src="/Users/tonyclark/Desktop/resume.index/resume.editor/resources/jazzyjoint.mp3" type="audio/mpeg">
-		  </audio>
+			<source src="./resources/jazzyjoint.mp3" type="audio/mpeg">
+		</audio>
 		
+		<script src="./main.js"></script>
 			
             <div class="newslatter">
 
@@ -29,11 +30,11 @@
 			</div>
 
 			<div class="content2">
-				<img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/157.png" width="280" height="280">
+				<img src="./img/157.png" width="280" height="280">
 			</div>
 
 			<div class="content3">
-				<img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/wingangel.png" width="280" height="280">
+				<img src="./img/wingangel.png" width="280" height="280">
 			</div>
 	
 
