updated background music to runescape theme

--- a/resume.editor/resumeIndex.html
+++ b/resume.editor/resumeIndex.html
@@ -18,7 +18,7 @@
 			<a href="./resumeUpdate.html" class="btn">Home</a>
 		</nav> 
 		<audio controls autoplay>
-			<source src="./resources/jazzyjoint.mp3" type="audio/mpeg">
+			<source src="./resources/rs.mp3" type="audio/mpeg">
 		</audio>
 		
 		<script src="./main.js"></script>
