UI and functionality updates

--- a/resume.editor/resumeUpdate.html
+++ b/resume.editor/resumeUpdate.html
@@ -113,7 +113,7 @@
     <div class="externalResources"> <a href="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/Resources/Resumex(SD).pdf" title="DOWNLOAD RESUME" target="_blank">DOWNLOAD RESUME</a> </div>
     <span class="stretch"></span>
   
-    <div class="externalResources"><a href="/Users/tonyclark/Desktop/resume.index/resume.editor/resumeIndex.html" title="Playable NFTs" target="_blank">Try my playable NFTs</a></div>
+    <div class="externalResources"><a href="/Users/tonyclark/Desktop/resume.index/resume.editor/resumeIndex.html" title="Playable NFTs" target="_blank">PLAY NFTs</a></div>
     <span class="stretch"></span> 
 	<!--div class="externalResources"><a href="Business_Page1.html" title="Business Website" target="_parent">Business Website</a></div>
     <span class="stretch"></span> -->
