--- a/resume.editor/resumeIndex.html
+++ b/resume.editor/resumeIndex.html
@@ -1,13 +1,19 @@
-<html>
-<head>
+<!DOCTYPE html>
+	<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Document</title>
+	
 	<title>Portfolio website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  	<link rel="preconnect" href="https://fonts.googleapis.com">
+  	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  	<link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
@@ -91,9 +97,9 @@
 	<footer>
 		<p>Anthony Clark</p>
 		<div class="social">
-			<a href="https://www.linkedin.com/in/anthony-clark-6a0543162/" target="_blank"><img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/linked copy.png" alt="Linked In alternate Icon (not official logo)" width="74" height="74" class="social"></a>
-			<a href="https://opensea.io/RealtyLoop" target="_blank"><img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/Logomark-Blue copy.png"  alt="Opensea Logo" width="74" height="74" class="social"></a>
-			<a href="https://github.com/TJC1996" target="_blank"><img src="/Users/tonyclark/Desktop/resume.index/resume.editor/img/Octocat copy.jpg" alt="Github Logo" width="74" height="74" class="social"></a>
+			<a href="https://www.linkedin.com/in/anthony-clark-6a0543162/" target="_blank"><img src="./img/linked.png" alt="Linked In alternate Icon (not official logo)" width="74" height="74" class="social"></a>
+			<a href="https://opensea.io/RealtyLoop" target="_blank"><img src="./img/Logomark-Blue.png"  alt="Opensea Logo" width="74" height="74" class="social"></a>
+			<a href="https://github.com/TJC1996" target="_blank"><img src="./img/Octocat.jpg" alt="Github Logo" width="74" height="74" class="social"></a>
 			
 		</div>
 		<p class="end">Copyright By Anthony Clark</p>
