Switched out resumeIndex for NFTresume to show NFT collection page

--- a/resume.editor/resumeUpdate.html
+++ b/resume.editor/resumeUpdate.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Anthony Clark</title>
 <link href="css/resumeCss.css" rel="stylesheet" type="text/css">
-
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
@@ -20,7 +19,7 @@
     <!-- Profile logo. Add a img tag in place of <span>. -->
     <p class="profileLogo"><!-- <img src="logoImage.png" alt="sample logo"> -->
 		
-		<img src="./img/Anthony Clark resume.png" alt="Anthony Clark logo" width=auto height="100"></p>
+		<img src="./img/Anthony Clark resume.png" alt="Anthony Clark logo" width=auto height="100"> </p>
   </div>
   <div class="profilePhoto"> 
     <!-- Profile photo --> 
@@ -61,7 +60,7 @@
     <hr class="sectionTitleRule2">
     <div class="section1Content">
       <p><span>Email:</span><a href="mailto:tonyclark1996@gmail.com">tonyclark1996@gmail.com</a> </p>
-      <p><a href="./resumeIndex.html"><span>Website :</span> anthonyclark.com</a></p>
+      <p><a href="./resumeUpdate.html"><span>Website :</span> anthonyclark.com</a></p>
       <p><span>Phone :</span> (732)962-3405 </p>
       <p><span>Address :</span> 2055 Bacon Street #14, San Diego, CA 92107</p>
     </div>
@@ -110,10 +109,10 @@
 </section>
   <!-- Links to expore your past projects and download your CV -->
   <aside class="externalResourcesNav">
-    <div class="externalResources"> <a href="/Users/tonyclark/Desktop/resume.index/resumeUpdate.editor/Resources/Resumex(SD).pdf" title="DOWNLOAD RESUME" target="_blank">DOWNLOAD RESUME</a> </div>
+    <div class="externalResources"> <a href="resources/Resumex(SD).pdf" title="DOWNLOAD RESUME" target="_blank">DOWNLOAD RESUME</a> </div>
     <span class="stretch"></span>
   
-    <div class="externalResources"><a href="/Users/tonyclark/Desktop/resume.index/resume.editor/resumeIndex.html" title="Playable NFTs" target="_blank">PLAY NFTs</a></div>
+    <div class="externalResources"><a href="./NFTresume.html" title="Playable NFTs" target="_blank">PLAY NFTs</a></div>
     <span class="stretch"></span> 
 	<!--div class="externalResources"><a href="Business_Page1.html" title="Business Website" target="_parent">Business Website</a></div>
     <span class="stretch"></span> -->
