--- a/resume.editor/resumeIndex.html
+++ b/resume.editor/resumeIndex.html
@@ -2,13 +2,11 @@
 	<html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Document</title>
+		<title>Playable NFTs</title>
 	
 	<title>Portfolio website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
   	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   	<link rel="preconnect" href="https://fonts.googleapis.com">
   	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,20 +27,31 @@
 		
 		<script src="./main.js"></script>
 			
-            <div class="newslatter">
+            
+
+	
+	<div class="row">
+
+		<div class="column">
 
 		    <div class="content">
-            <img src="img/tubby.png" width="280" height="280">
+            <img src="img/tubby.png" width=300px;>
 			</div>
+		</div>
 
+		<div class="column">
 			<div class="content2">
-				<img src="./img/157.png" width="280" height="280">
+				<img src="./img/157.png" width=300px;>
 			</div>
+		</div>
 
+		<div class="column">
 			<div class="content3">
-				<img src="./img/wingangel.png" width="280" height="280">
+				<img src="./img/wingangel.png" width=300px;>
 			</div>
-	
+		</div>
+
+	</div>
 
 		<!----	<div class="content2">
 				<img src="img/tubby.png" width="300" height="300" > -->
