Updated NFT page to new file

--- a/resume.editor/NFTresume.html
+++ b/resume.editor/NFTresume.html
@@ -1,64 +1,97 @@
 <!doctype html>
 <html>
 <head>
+
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>Playable NFTs</title>
+
+	<style type="text/css">
+	 @font-face{
+	font-family: runescape;
+	src: url("fonts/RuneScape-Chat-07.ttf") format("truetype");
+		}
+
+	</style>
 <link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+
 </head>
+
 <body>
 <!-- Main Container -->
 <div class="container"> 
   <!-- Header -->
   <header class="header">
 	  <div class="back">
-		<a class="btn" href="./resumeUpdate.html">Back</a> 
+		<a class="btn" href="./resumeUpdate.html">Back</a>
+		<script src="./main.js"></script>
 	  </div>
 	  
 	  <div class="music">
 	  	<audio controls autoplay>
-			<source src="./resources/rs.mp3" type="audio/mpeg">
+			<source src="./resources/rs1.mp3" type="audio/mpeg">
 		</audio>
 	  </div>
     <h4 class="logo">Welcome to my NFT collection!</h4>
 	
   </header>
   <!-- Hero Section -->
+
   <section class="intro">
-    <div class="column">
-      <h3>JOHN DOE</h3>
-      <img src="img/tubby.png" alt="" class="profile"> </div>
-    <div class="column">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla </p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
-    </div>
+		<div class="column">
+		<h3>tubby cat #9272</h3>
+		<img src="img/tubby.png" alt="teal durag tubby cat" class="profile"> 
+	  
+		</div>
+
+	    <div class="column">
+		<h3>Jungle Freaks</h3>
+		<img src="img/157.png" alt="jungle freak #157" class="profile">
+	   
+	    </div>
+				<!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla </p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
+			    </div> -->
   </section>
   <!-- Stats Gallery Section -->
   <div class="gallery">
-    <div class="thumbnail"><iframe class="gd" src="https://viewer.generativedungeon.com/1100" height="350px" width="350px"></iframe>
+
+	  <div class="thumbnail"><iframe class="gd" src="https://viewer.generativedungeon.com/1100" height="350px" width="350px"></iframe>
       <h4>Generative Dungeon</h4>
       <p class="tag">1100</p>
       <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs.</p>
-    </div>
-    <div class="thumbnail"> <iframe class="gd" src="https://viewer.generativedungeon.com/2715" height="350px" width="350px"></iframe>
+
+	  </div>
+
+	  <div class="thumbnail"> <iframe class="gd" src="https://viewer.generativedungeon.com/2715" height="350px" width="350px"></iframe>
       <h4>Generative Dungeon</h4>
       <p class="tag">2715</p>
       <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs.</p>
+
+	  </div>
+
+
+  </div>
+
+	<div class="gallery">
+
+
+	<div class="thumbnail"> <iframe class="gd" src="https://viewer.generativedungeon.com/1752" height="350px" width="350px"></iframe>
+      <h4>Generative Dungeon</h4>
+      <p class="tag">1752</p>
+      <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs.</p>
     </div>
-</div>
-  <div class="gallery">
-    <div class="thumbnail"> <iframe class="gd" src="https://viewer.generativedungeon.com/1752" height="350px" width="350px"></iframe>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+
+	<div class="thumbnail"> <iframe class="gd" src="https://viewer.generativedungeon.com/2381" height="350px" width="350px"></iframe>
+      <h4>Generative Dungeon</h4>
+      <p class="tag">2381</p>
+      <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs.</p>
     </div>
-<div class="thumbnail"> <iframe class="gd" src="https://viewer.generativedungeon.com/2381" height="350px" width="350px"></iframe>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-</div>
+
+	</div>
 	 <!--  <div class="button"> -->
   <!-- Footer Section -->
   <footer id="contact">
@@ -73,7 +106,7 @@
 		</div>
   </footer>
   <!-- Copyrights Section -->
-  <div class="copyright">&copy;2021 - <strong>Anthony Clark</strong></div>
+  <div class="copyright">&copy;2022 - <strong>Anthony Clark</strong></div>
 </div>
 <!-- Main Container Ends -->
 </body>
