Added a clock to NFT page

--- a/resume.editor/NFTresume.html
+++ b/resume.editor/NFTresume.html
@@ -26,6 +26,12 @@
   <header class="header">
 	  <div class="back">
 		<a class="btn" href="./resumeUpdate.html">Back</a>
+		
+		<div class="clock">
+		<span class="clock-time"></span>
+		<span class="clock-ampm"></span>
+		</div>
+		
 		<script src="./main.js"></script>
 	  </div>
 	  
