UI updates on NFT page (centered clock and audio input)

--- a/resume.editor/NFTresume.html
+++ b/resume.editor/NFTresume.html
@@ -35,7 +35,7 @@
 		<script src="./main.js"></script>
 	  </div>
 	  
-	  <div class="music">
+	  <div class="music" align="center">
 	  	<audio controls autoplay>
 			<source src="./resources/rs1.mp3" type="audio/mpeg">
 		</audio>
@@ -53,7 +53,7 @@
 		</div>
 
 	    <div class="column">
-		<h3>Jungle Freaks</h3>
+		<h3>Jungle Freak #157</h3>
 		<img src="img/157.png" alt="jungle freak #157" class="profile">
 	   
 	    </div>
@@ -74,7 +74,7 @@
 	  <div class="thumbnail"> <iframe class="gd" src="https://viewer.generativedungeon.com/2715" height="350px" width="350px"></iframe>
       <h4>Generative Dungeon</h4>
       <p class="tag">2715</p>
-      <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs.</p>
+      <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs. Password: gd</p>
 
 	  </div>
 
@@ -87,14 +87,14 @@
 	<div class="thumbnail"> <iframe class="gd" src="https://viewer.generativedungeon.com/1752" height="350px" width="350px"></iframe>
       <h4>Generative Dungeon</h4>
       <p class="tag">1752</p>
-      <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs.</p>
+      <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs. Password: gd</p>
     </div>
 
 
 	<div class="thumbnail"> <iframe class="gd" src="https://viewer.generativedungeon.com/2381" height="350px" width="350px"></iframe>
       <h4>Generative Dungeon</h4>
       <p class="tag">2381</p>
-      <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs.</p>
+      <p class="text_column">Artwork you can play! Generative Dungeon is a collection of 3,000 iterative, interactive dungeon-themed NFTs. Password: gd</p>
     </div>
 
 	</div>
