--- a/resume.editor/resumeUpdate.html
+++ b/resume.editor/resumeUpdate.html
@@ -60,7 +60,7 @@
     <hr class="sectionTitleRule2">
     <div class="section1Content">
       <p><span>Email:</span><a href="mailto:tonyclark1996@gmail.com">tonyclark1996@gmail.com</a> </p>
-      <p><a href="./resumeUpdate.html"><span>Website :</span> anthonyclark.com</a></p>
+      <p><a href="https://anthonyclark1996.com/" target="_blank"><span>Website :</span> anthonyclark1996.com</a></p>
       <p><span>Phone :</span> (732)962-3405 </p>
       <p><span>Address :</span> 2055 Bacon Street #14, San Diego, CA 92107</p>
     </div>
