Added some UI text fix updates

--- a/resume.editor/resumeUpdate.html
+++ b/resume.editor/resumeUpdate.html
@@ -31,7 +31,7 @@
     <h1>Anthony Clark</h1>
     <h3>Created on August 12, 1996</h3>
 	  
-	  <p>I am from Sea Girt, New Jersey. I graduated from San Diego State University in December 2019. Currently I am working for Labcorp Covance as a Web Developer. My objective is to obtain a position as a Software Engineer/Web Developer/ Blockchain Engineer where I can continue
+	  <p>I am from Sea Girt, New Jersey. I graduated from San Diego State University in December 2019. Currently I am working for Labcorp Covance as a Web Developer. My objective is to obtain a position as a Software Engineer/Web Developer/Blockchain Engineer where I can continue
         my education in Information Systems and contribute to the growth of a company.</p>
   </section>
   <!-- Links to Social network accounts -->
@@ -80,7 +80,7 @@
     <!-- Second Title & company details  -->
     <article class="section2Content">
       <h2 class="sectionContentTitle"> Twin Brook Property Management</h2>
-      <h3 class="sectionContentSubTitle">Property Inspector / July - August 2019</h3>
+      <h3 class="sectionContentSubTitle">Property Inspector / June - August 2019</h3>
       <p class="sectionContent"> <ul> <li>Traveled throughout New Jersey to do weekly inspections on different properties</li> <li>Showed apartment units and retail space to clients</li> <li>Worked with property managers to help manage problem risks</li></ul> </p>
     </article>
 
@@ -98,6 +98,17 @@
       <p class="sectionContent"> <ul> <li>Proctored and administered exams in a private and secure setting</li> <li> Drove injured students/athletes to class on university funded golf carts</li> <li>Delivered completed exams to professors</li></ul> </p>
     </article>
     <!-- Replicate the above Div block to add more title and company details --> 
+    <article class="section2Content">
+      <h2 class="sectionContentTitle">Sitar Realty Company, Iselin NJ</h2>
+      <h3 class="sectionContentSubTitle">Administrative Assistant / 2015-2017</h3>
+      <p class="sectionContent"> <ul> <li>Shadowed corporate real-estate brokers to develop an understanding of real estate</li> <li>Compiled key information from various business conferences for future reference</li> <li>Assisted in property inspections of potential and current listings</li></ul> </p>
+    </article>
+
+    <article class="section2Content">
+      <h2 class="sectionContentTitle">United States Bankruptcy Court, Newark NJ</h2>
+      <h3 class="sectionContentSubTitle">Intern / Summer 2014</h3>
+      <p class="sectionContent"> <ul> <li>Finalized petitions and claims for standard Bankruptcy court procedures</li> <li>Examined Bankruptcy and District Court trials</li> <li>Logged old bankruptcy cases to help update computer systems</li></ul> </p>
+    </article>
   </section>
 
   <section class="section3">
