--- a/resume.editor/NFTresume.html
+++ b/resume.editor/NFTresume.html
@@ -15,7 +15,7 @@
 		}
 
 	</style>
-<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<link href="./css/NFTcss.css" rel="stylesheet" type="text/css">
 
 </head>
 
